# claude-to-openai-response

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
