[package]
name = "ccctl"
version = "0.1.0"
edition = "2021"
description = "Proxy Claude Code to OpenAI Responses API"
license = "MIT"

[dependencies]
async-stream = "0.3"
axum = { version = "0.7", features = ["json"] }
bytes = "1"
futures-util = "0.3"
http = "1"
log = { version = "0.4", features = ["std"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync", "time"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tower = "0.5"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
